--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,12 @@
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #1c1b22;
+  font-family: var(--font-jetbrainsMono);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #1c1b22;
     --foreground: #ededed;
   }
 }
@@ -13,15 +14,14 @@
 html,
 body {
   max-width: 100vw;
+  max-height: 100vh;
   overflow-x: hidden;
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: var(--font-jetbrainsMono);
 }
 
 * {
